--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
-    "sass": "^1.77.8"
+    "react-slick": "^0.30.2",
+    "sass": "^1.77.8",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
