--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
     "react-slick": "^0.30.2",
